--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
-    "next": "16.0.0",
+    "next": "^16.1.1",
     "postprocessing": "^6.37.8",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "swiper": "^12.0.3",
     "three": "^0.180.0"
